added random text

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <a href="playerprofiles/theleague.html" style="text-decoration:none">
     <h2 class="two">The League</h2>
   </a>
-    <p id="honda">Triple City:<br>Personalized stats <br>for your favorite player.</p>
+  <p id="honda">Triple City:<br>Personalized stats <br>for your favorite player. adjdajdasjdsajsdaj</p>
   <hr>
-  
+
   <footer>Kyle Morales © 2024 <br>Shoutout to Ean Bressack</footer>
 
 </body>
