--- a/playerprofiles/theleague.html
+++ b/playerprofiles/theleague.html
@@ -24,6 +24,10 @@
       <a href="will/will.html"><img src="will/will.jpg"></a>
       <p>Will</p>
     </div>
+    <div class="imagetext">
+      <a href="zach/zach.html"><img src="zach/zach.jpg"></a>
+      <p>Zach</p>
+    </div>
   </div>
   <hr>
   <footer>Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
