--- a/theleague/playerprofiles/gavin/gavin.html
+++ b/theleague/playerprofiles/gavin/gavin.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Gavin</title>
-  <link href="gavin.css" rel="stylesheet" type="text/css" />
+  <title>Gavin Bressack</title>
+  <link href="gavin.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <h2>Pitching</h2>
       <p>ERA: 4.34 <br> Pitches: Fastball, slider </p>
       <h2>Batting</h2>
-      <p>Hits: 8 <br> HR: 1<br>Strikeouts: 1 to Will Stewart</p>
+      <p>ASN: 4<br>Nukes: 1<br>Strikeouts: 1 to Will Stewart</p>
     </div>
   </div>
   
@@ -25,7 +25,7 @@
   <footer>
     Kyle Morales © 2024 <br>Shoutout to Ean Bressack
     <br>
-    <a href="/playerprofiles/theleague.html">The League</a>
+    <a href="/theleague/theleague.html">The League</a>
   </footer>
   
 </body>
