--- a/theleague/playerprofiles/max/max.html
+++ b/theleague/playerprofiles/max/max.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Max</title>
+  <title>Max Muscarella</title>
   <link href="max.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class="todo">
     <div class="algo">
-      <h1>Max Muscarella</h1>
+      <h1>Max Muscarella <br> PLAYER OF THE MONTH </h1>
       <img src="mp.jpg">
       <h2>Pitching</h2>
       <p>ERA: 2.53 <br> Pitches: Fastball, cutter, splitter, throwaway pitch, <br>L slider, bad for my hand screwball, rip-off curveball </p>
       <h2>Batting</h2>
-      <p>Hits: 7<br>HR: 5<br>Strikeouts: 2 Daddy whiffs on a D yama curveball, 1 sword </p>
+      <p>ASN: 7<br>Nukes: 2<br>Strikeouts: 2 Daddy whiffs on a D yama curveball, 1 sword </p>
     </div>
   </div>
 
@@ -25,7 +25,7 @@
   <footer>
     Kyle Morales © 2024 <br>Shoutout to Ean Bressack
     <br>
-    <a href="/playerprofiles/theleague.html">The League</a>
+    <a href="/theleague/theleague.html">The League</a>
   </footer>
   
 </body>
