--- a/theleague/playerprofiles/playerprofiles.html
+++ b/theleague/playerprofiles/playerprofiles.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>The League</title>
-  <link href="theleague.css" rel="stylesheet" type="text/css" />
+  <title>Player Profiles</title>
+  <link href="playerprofiles.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <h1>The League</h1>
-  <h2>Player Profiles</h2>
+  <div class="menu">
+    <a href="playerprofiles.html"><h2>Player Profiles</h2></a>
+    <a href="../leaderboards/leaderboards.html"><h2>Leaderboards</h2></a>
+  </div>
   <div class="roll">
     <div class="imagetext">
       <a href="gavin/gavin.html"><img src="gavin/gavin.jpg"></a>
@@ -29,9 +33,8 @@
       <p>Zach</p>
     </div>
   </div>
-  <hr>
-  <footer>Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
-    <a href="/index.html">Home</a>
+  <footer><hr>Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
+    <a href="../theleague.html">The League</a>
   </footer>
 </body>
 
