--- a/theleague/playerprofiles/zach/zach.html
+++ b/theleague/playerprofiles/zach/zach.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Will</title>
-  <link href="will.css" rel="stylesheet" type="text/css" />
+  <title>Zach Moro</title>
+  <link href="zach.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class="todo">
     <div class="algo">
-      <h1>Will Stewart</h1>
-      <img src="wp.jpg">
+      <h1>Zach Moro</h1>
+      <img src="zp.jpg">
       <h2>Pitching</h2>
-      <p>ERA: 0.00 <br> Pitches: Meatball, daddy whiff curve, throwaway pitch</p>
+      <p>ERA: 0.00 <br> Pitches: Not unlocked yet</p>
       <h2>Batting</h2>
-      <p>Hits: 1<br>HR: 0<br>Strikeouts: 18</p>
+      <p>ASN: 5<br>Nukes: 3<br>Strikeouts: 9</p>
     </div>
   </div>
 
@@ -25,7 +25,7 @@
   <footer>
     Kyle Morales © 2024 <br>Shoutout to Ean Bressack
     <br>
-    <a href="/playerprofiles/theleague.html">The League</a>
+    <a href="/theleague/theleague.html">The League</a>
   </footer>
   
 </body>
