--- a/theleague/theleague.html
+++ b/theleague/theleague.html
@@ -29,7 +29,7 @@
   <footer>
     <hr>
     Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
-    <a href="/index.html" id="home">Home</a>
+    <a href="/index.html" id="home">Kyle's Projects</a>
   </footer>
 </body>
 
