--- a/theleague/leaderboards/leaderboards.html
+++ b/theleague/leaderboards/leaderboards.html
@@ -23,19 +23,19 @@
   <div class="leaders">
     <div class="statname">
       <a href="ASN/ASN.html"id="asn"><h3 id="asn">ASN</h3></a>
-      <p>1: Max Muscarella</p>
+      <p>1: Aragon Lai - 7.5</p>
     </div>
     <div class="statname">
       <h3 id="nukes">Nukes</h3>
-      <p>1: Zach Moro</p>
+      <p>1: Zach Moro - 3</p>
     </div>
     <div class="statname">
-      <h3>SO (not active)</h3>
-      <p>1: Will Stewart</p>
+      <h3>SO</h3>
+      <p>1: Kyle Morales - 3</p>
     </div>
     <div class="statname">
-      <h3>ERA (not active)</h3>
-      <p>1: Gavin Bressack</p>
+      <h3>K</h3>
+      <p>1: Kyle Morales - 10</p>
     </div>
   </div>
 
