--- a/stewartball/leaderboards/leaderboards.html
+++ b/stewartball/leaderboards/leaderboards.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>The League</h1>
+  <h1>Stewartball</h1>
   <div class="menu">
     <a href="../playerprofiles/playerprofiles.html">
       <h2>Player Profiles</h2>
@@ -41,7 +41,7 @@
 
   <footer>
     <hr>Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
-    <a href="../theleague.html">The League</a>
+    <a href="../stewartball.html">Stewartball</a>
   </footer>
 </body>
 
