--- a/stewartball/playerprofiles/gavin/gavin.html
+++ b/stewartball/playerprofiles/gavin/gavin.html
@@ -14,9 +14,9 @@
       <h1>Gavin Bressack</h1>
       <img src="gp.jpg">
       <h2>Pitching</h2>
-      <p>ERA: 4.34 <br> Pitches: Fastball, slider </p>
+      <p>K's: 3 <br> Pitches: Fastball, slider, Clayton Kershaw curveball </p>
       <h2>Batting</h2>
-      <p>ASN: 4<br>Nukes: 1<br>Strikeouts: 1 to Will Stewart</p>
+      <p>ASN: 4.5<br>Nukes: 0<br>Strikeouts: 1 to Will Stewart</p>
     </div>
   </div>
   
