--- a/stewartball/playerprofiles/max/max.html
+++ b/stewartball/playerprofiles/max/max.html
@@ -14,9 +14,9 @@
       <h1>Max Muscarella <br> PLAYER OF THE MONTH </h1>
       <img src="mp.jpg">
       <h2>Pitching</h2>
-      <p>ERA: 2.53 <br> Pitches: Fastball, cutter, splitter, throwaway pitch, <br>L slider, bad for my hand screwball, rip-off curveball </p>
+      <p>K's: 7<br> Pitches: Fastball, cutter, splitter, throwaway pitch, <br>L slider, bad for my hand screwball, rip-off curveball </p>
       <h2>Batting</h2>
-      <p>ASN: 7<br>Nukes: 2<br>Strikeouts: 2 Daddy whiffs on a D yama curveball, 1 sword </p>
+      <p>ASN: 6.5<br>Nukes: 2<br>Strikeouts: 1 (plate discipline city) </p>
     </div>
   </div>
 
