--- a/stewartball/playerprofiles/will/will.html
+++ b/stewartball/playerprofiles/will/will.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Zach Moro</title>
-  <link href="zach.css" rel="stylesheet" type="text/css" />
+  <title>Will Stewart</title>
+  <link href="will.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class="todo">
     <div class="algo">
-      <h1>Zach Moro</h1>
-      <img src="zp.jpg">
+      <h1>Will Stewart</h1>
+      <img src="wp.jpg">
       <h2>Pitching</h2>
-      <p>ERA: 0.00 <br> Pitches: Not unlocked yet</p>
+      <p>K's: 1 (against Gavin Bressack) <br> Pitches: Meatball, daddy whiff curve, throwaway pitch</p>
       <h2>Batting</h2>
-      <p>ASN: 5<br>Nukes: 3<br>Strikeouts: 9</p>
+      <p>ASN: 2.5<br>Nukes: 0<br>Strikeouts: N/A</p>
     </div>
   </div>
 
