--- a/stewartball/stewartball.html
+++ b/stewartball/stewartball.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>The League</title>
-  <link href="theleague.css" rel="stylesheet" type="text/css" />
+  <title>Stewartball</title>
+  <link href="stewartball.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>The League</h1>
+  <h1>Stewartball</h1>
   <div class="where">
     <a href="playerprofiles/playerprofiles.html" class="special">
       <div class="imagetext">
