--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <h1>Kyle's Projects</h1>
-  <a href="theleague/theleague.html" style="text-decoration:none">
-    <h2 class="two">The League</h2>
+  <a href="stewartball/stewartball.html" style="text-decoration:none">
+    <h2 class="two">Stewartball</h2>
   </a>
   <p id="honda">Triple City:<br>Personalized stats <br>for your favorite player.</p>
 
