--- a/stewartball/playerprofiles/playerprofiles.html
+++ b/stewartball/playerprofiles/playerprofiles.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>The League</h1>
+  <h1>Stewartball</h1>
   <div class="menu">
     <a href="playerprofiles.html"><h2>Player Profiles</h2></a>
     <a href="../leaderboards/leaderboards.html"><h2>Leaderboards</h2></a>
@@ -34,7 +34,7 @@
     </div>
   </div>
   <footer><hr>Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
-    <a href="../theleague.html">The League</a>
+    <a href="../stewartball.html">Stewartball</a>
   </footer>
 </body>
 
