--- a/stewartball/leaderboards/ASN/ASN.html
+++ b/stewartball/leaderboards/ASN/ASN.html
@@ -26,28 +26,33 @@
         </tr>
         <tr>
           <td>1</td>
-          <td>Max Muscarella</td>
-          <td>7</td>
+          <td>Aragon Lai</td>
+          <td>7.5</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Kyle Morales</td>
-          <td>6</td>
+          <td>Max Muscarella</td>
+          <td>6.5</td>
         </tr>
         <tr>
           <td>3</td>
+          <td>Kyle Morales</td>
+          <td>5.5</td>
+        </tr>
+        <tr>
+          <td>4</td>
           <td>Zach Moro</td>
           <td>5</td>
         </tr>
         <tr>
-          <td>4</td>
+          <td>5</td>
           <td>Gavin Bressack</td>
-          <td>4</td>
+          <td>4.5</td>
         </tr>
         <tr>
-          <td>5</td>
+          <td>6</td>
           <td>Will Stewart</td>
-          <td>0</td>
+          <td>2.5</td>
         </tr>
       </table>
     </div>
