--- a/stewartball/playerprofiles/zach/zach.html
+++ b/stewartball/playerprofiles/zach/zach.html
@@ -25,7 +25,7 @@
   <footer>
     Kyle Morales © 2024 <br>Shoutout to Ean Bressack
     <br>
-    <a href="/theleague/theleague.html">The League</a>
+    <a href="/stewartball/stewartball.html">Stewartball</a>
   </footer>
 
 </body>
