--- a/stewartball/stewartball.html
+++ b/stewartball/stewartball.html
@@ -25,11 +25,11 @@
       </div>
     </a>
   </div>
-  
+
   <footer>
     <hr>
     Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
-    <a href="/index.html" id="home">Kyle's Projects</a>
+    <a href="index.html" id="home">Kyle's Projects</a>
   </footer>
 </body>
 
