--- a/stewartball/playerprofiles/will/will.html
+++ b/stewartball/playerprofiles/will/will.html
@@ -25,7 +25,7 @@
   <footer>
     Kyle Morales © 2024 <br>Shoutout to Ean Bressack
     <br>
-    <a href="/stewartball/stewartball.html">Stewartball</a>
+    <a href="../../../stewartball/stewartball.html">Stewartball</a>
   </footer>
   
 </body>
