--- a/stewartball/leaderboards/leaderboards.html
+++ b/stewartball/leaderboards/leaderboards.html
@@ -23,19 +23,23 @@
   <div class="leaders">
     <div class="statname">
       <a href="ASN/ASN.html"id="asn"><h3 id="asn">ASN</h3></a>
-      <p>1: Aragon Lai - 7.5</p>
+      <p>Leader: Aragon Lai - 7.5</p>
+      <p>2nd: Max Muscarella - 6.5</p>
     </div>
     <div class="statname">
       <h3 id="nukes">Nukes</h3>
-      <p>1: Zach Moro - 3</p>
+      <p>Leader: Zach Moro - 3</p>
+      <p>2nd: 2 tied</p>
     </div>
     <div class="statname">
       <h3>SO</h3>
-      <p>1: Kyle Morales - 3</p>
+      <p>Leader: Gavin Bressack - 3</p>
+      <p>2nd: Kyle Morales - 2</p>
     </div>
     <div class="statname">
       <h3>K</h3>
-      <p>1: Kyle Morales - 10</p>
+      <p>Leader: Kyle Morales - 18</p>
+      <p>2nd: Max Muscarella - 10</p>
     </div>
   </div>
 
