--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
-  <h1>Kyle's Projects</h1>
-  <a href="stewartball/stewartball.html" style="text-decoration:none">
-    <h2 class="two">Stewartball</h2>
-  </a>
-  <p id="honda">Triple City:<br>Personalized stats <br>for your favorite player.</p>
+  <div class="container">
+    <div><a href="index.html"><h2>PROJECTS</h2><p>Endless projects forever</p></a></div>
+    <div><a href="stewartball/stewartball.html"><h2>STEWARTBALL</h2><p>Personalized statistics<br>for your favorite player</p></a></div>
+    <div><a href="blur/blur.html"><h2>BLUR</h2><p>Seamless transitions</p></a></div>
+  </div>
 
+  
   <footer><hr>Kyle Morales © 2024 <br>Shoutout to Ean Bressack</footer>
 
 </body>
