--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
   <div class="container">
-    <div><a href="index.html"><h2>PROJECTS</h2><p>Endless projects forever</p></a></div>
-    <div><a href="stewartball/stewartball.html"><h2>STEWARTBALL</h2><p>Personalized statistics<br>for your favorite player</p></a></div>
-    <div><a href="blur/blur.html"><h2>BLUR</h2><p>Seamless transitions</p></a></div>
+    <div><a href="index.html"><h2>PROJECTS</h2><p>all my stuff</p></a></div>
+    <div><a href="stewartball/stewartball.html"><h2>STEWARTBALL</h2><p>personalized statistics<br>for your favorite player</p></a></div>
+    <div><a href="blur/blur.html"><h2>BLUR</h2><p>yummy blur scrool animation</p></a></div>
+    <div><a href="cards/cards.html"><h2>CARDS</h2><p>bezier curve used</p></a>
   </div>
 
   
