--- a/stewartball/stewartball.html
+++ b/stewartball/stewartball.html
@@ -6,31 +6,47 @@
   <meta name="viewport" content="width=device-width">
   <title>Stewartball</title>
   <link href="stewartball.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;1,9..40,100&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-  <h1>Stewartball</h1>
-  <div class="where">
-    <a href="playerprofiles/playerprofiles.html" class="special">
-      <div class="imagetext">
-        <h2>Player Profiles</h2>
-        <img src="playerprofiles.jpg">
-      </div>
-    </a>
-    <a href="leaderboards/leaderboards.html" class="special">
-      <div class="imagetext">
-        <h2>Leaderboards</h2>
-        <img src="leaderboards.jpg">
-      </div>
-    </a>
+  <div class="title">
+    <h1 class="heading1">STEWARTBALL</h1>
   </div>
 
+  <div class="about" </div>
+    <div class="text">President: William Stewart</div>
+    <div class="text">Founded in 2024 by a heartbroken boy, <br>Stewartball is a sport that runs on <br>pure technique
+      and pulchritude</div>
+  </div>
+
+  <div class="blur">
+    <a href="playerprofiles/playerprofiles.html">
+      <h2 class="heading2">PROFILES</h2>
+    </a>
+    <a href="leaderboards/leaderboards.html">
+      <h2 class="heading2">LEADERBOARDS</h2>
+    </a>
+    <a href="playerprofiles/gavin/gavin.html">
+      <h2 class="heading2">GAVIN BRESSACK</h2>
+    </a>
+    <a href="playerprofiles/max/max.html">
+      <h2 class="heading2">MAX MUSCARELLA</h2>
+    </a>
+    <a href="playerprofiles/zach/zach.html">
+      <h2 class="heading2">ZACH MORO</h2>
+    </a>
+    <a href="playerprofiles/will/will.html">
+      <h2 class="heading2">WILL STEWART</h2>
+    </a>
+  </div>
   <footer>
     <hr>
     Kyle Morales © 2024<br>Shoutout to Ean Bressack<br>
     <a href="../index.html" id="home">Kyle's Projects</a>
   </footer>
+
 </body>
 
 </html>
