--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <meta name="viewport" content="width=device-width">
   <title>Kyle's Projects</title>
   <link href="styles.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Parisienne&family=Rock+Salt&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <div class="container">
-    <div><a href="index.html"><h2>PROJECTS</h2><p>all my stuff</p></a></div>
-    <div><a href="stewartball/stewartball.html"><h2>STEWARTBALL</h2><p>personalized statistics<br>for your favorite player</p></a></div>
-    <div><a href="blur/blur.html"><h2>BLUR</h2><p>yummy blur scrool animation</p></a></div>
-    <div><a href="cards/cards.html"><h2>CARDS</h2><p>bezier curve used</p></a></div>
-    <div><a href="photography/photography.html"<h2>PHOTOGRAPHY</h2><p>wow</p></a></div>
+    <div class="card" id="one"><a href="stewartball/stewartball.html"><h2>stewartball</h2><p>personalized statistics<br>for your favorite player</p></a></div>
+    <div class="card" id="two"><a href="blur/blur.html"><h2>blur</h2><p>yummy blur scrool animation</p></a></div>
+    <div class="card" id="three"><a href="cards/cards.html"><h2>cards</h2><p>bezier curve used</p></a></div>
+    <div class="card" id="four"><a href="photography/photography.html"><h2>photography</h2><p>wow</p></a></div>
+    <div class="card" id="five"><a href="chemistry/chemistry.html"><h2>chemistry</h2><p>para quien</p></a></div>
+    <div class="card" id="six"><a href="index.html"><h2>project</h2><p>all my stuff</p></a></div>
   </div>
 
   
